--- a/.github/workflows/firehol-ipset.yml
+++ b/.github/workflows/firehol-ipset.yml
@@ -2,24 +2,34 @@ name: firehol-ipset
 
 on:
   schedule:
-    - cron: '* * * * *'  # Runs at 00:00 UTC every day
+    - cron: '* * * * *' # Run every day at midnight (you can adjust the schedule as needed)
 
 jobs:
-  run_script:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
 
-      - name: Install dependencies
-        run: |
-          pip install requests tqdm
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests tqdm
+        pip install -r requirements.txt
 
-      - name: Run script
-        run: python firehol-ipset.py # Replace 'your_script.py' with the name of your Python script
+    - name: Run script
+      run: python firehol-ipset.py
+
+    - name: Commit and push changes
+      run: |
+        git config --global user.email "action@github.com"
+        git config --global user.name "GitHub Action"
+        git add .
+        git commit -m "Automated update of merged_unique.txt"
+        git push
